# Semantic-Segmentation-with-Knowledge-Distilled-SegFormer

./: .gitignore  .mailmap  KD.ipynb  README.md  main.py  pyproject.toml  requirements.txt
configs/: AttnFD_ADE20k.yml  AttnFD_COCOStuff.yml  BPKD_ADE20k.yml  FitNet_ADE20k.yml  FitNet_COCOStuff.yml  FitNet_Test.yml  MLP_ADE20k.yml  Segformer_ADE20k.yml  Segformer_B4_ADE20k.yml  UHBKD_ADE20k.yaml  UHBKD_ADE20k_20.yaml  UHBKD_ADE20k_32.yaml  combine.yml  combine_curriculum.yml  combine_scale_norm.yml  combine_weight.yml  combine_weight_20.yml  eval_BPKD.yml  eval_Combine.yml  eval_MLPFD.yml
docs/: error_analysis.md
eval_results/comparison/: metadata.csv
eval_results/others/: error_taxonomy_summary.csv  quantitative_summary.csv  top_classes_analysis.csv
src/: eval.py  train.py
src/dataloaders/: ade20k.py  augment.py  coco_stuff.py
src/distillers/: MLP.py  attn_fd.py  base.py  bpkd.py  combine.py  combine_v2.py  fit_net.py  kd.py  mlp.py  supervised.py  uhbkd.py
src/engine/: lr_scheduler.py  trainMLP.py  trainer.py
src/evaluation/: compare_methods.py  error_analysis.py  error_taxonomy.py  main_eval.py  per_class_analysis.py  quantitative_eval.py
src/models/: segformer.py
