[project]
name = "semantic-segmentation-with-knowledge-distilled-segformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.66",
]
